* fab file changes * lexicon install includes number ordering * display fixes for game on tablet * moving some todos and bugs to Trello page
git-svn-id: https://gtsvn.uit.no/langtech/trunk/apps/aajege@83818 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/sma-client/app/views/games/styles/leksa.styl
+++ b/src/sma-client/app/views/games/styles/leksa.styl
@@ -447,9 +447,23 @@
                 border: 3px solid #FFF
                 background-color: #3A3
 
+        // .word_to_image
+        //     .image-item
+        //         margin-right: 15px
+        //         margin-bottom: 15px
 
         .one_image .question_prompt
             margin-bottom: 3em
+
+        ul.image-grid
+            width: 500px !important
+
+        .grid-3, .grid-4
+            height: 500px !important
+
+        .grid-2
+            height: ((500/2)+15)px
+
 
         .grid-2, .grid-1
             margin-top: 100px !important
